--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -542,16 +542,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-3-free-ssr-subscribe.htm" title="11月3日→20M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐">11月3日→20M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-16-free-node-subscribe-links.htm" title="10月16日→20.8M/S|2025年最新免费节点Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐">10月16日→20.8M/S|2025年最新免费节点Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-26-free-v2ray-subscribe.htm" title="10月26日→20.2M/S|2025年最新免费节点Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点订阅链接地址，便宜机场推荐">10月26日→20.2M/S|2025年最新免费节点Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-10-shadowrocket-node.htm" title="10月10日→18.9M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">10月10日→18.9M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-7-free-clash-subscribe.htm" title="10月7日→21.3M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">10月7日→21.3M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-6-free-v2ray-subscribe.htm" title="10月6日→19.6M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">10月6日→19.6M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-25-clash-node.htm" title="10月25日→21.2M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐">10月25日→21.2M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-clash-node-daily-updates.htm" title="10月5日→19.5M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐">10月5日→19.5M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-8-free-high-speed-nodes.htm" title="10月8日→22.5M/S|2025年最新免费节点SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">10月8日→22.5M/S|2025年最新免费节点SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-19-free-v2ray-subscribe.htm" title="10月19日→22.8M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/V2ray节点/SSR节点/Clash节点订阅链接地址，便宜机场推荐">10月19日→22.8M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/V2ray节点/SSR节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-18-clash-windows.htm" title="10月18日→18.6M/S|2025年最新免费节点Singbox节点/Clash节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐">10月18日→18.6M/S|2025年最新免费节点Singbox节点/Clash节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-13-free-v2ray-subscribe.htm" title="10月13日→23M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐">10月13日→23M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-26-free-v2ray-subscribe.htm" title="10月26日→20.2M/S|2025年最新免费节点Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点订阅链接地址，便宜机场推荐">10月26日→20.2M/S|2025年最新免费节点Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-3-free-v2ray.htm" title="10月3日→19.1M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">10月3日→19.1M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-17-node-share-links.htm" title="10月17日→19.8M/S|2025年最新免费节点V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐">10月17日→19.8M/S|2025年最新免费节点V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-20-free-node-subscribe.htm" title="10月20日→19.9M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">10月20日→19.9M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-6-free-v2ray.htm" title="11月6日→18.3M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐">11月6日→18.3M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-16-free-node-subscribe-links.htm" title="10月16日→20.8M/S|2025年最新免费节点Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐">10月16日→20.8M/S|2025年最新免费节点Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -563,7 +563,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
